# qbin

./: CMakeLists.txt  README.md  changelog.txt
src/: .directory  CMakeLists.txt  base.h  index_extend.h  mapper.h  shape_extend.h  testBinning.cpp
